[package]
name = "registry-manager"
version = "0.2.1"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
dotenv = ["dep:dotenvy"]

[dependencies]
base64 = "0.22"
chrono = "0.4"
dotenvy = { version = "0.15", optional = true }
node-semver = "2.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
